--- a/Thehelper/app/views/users/registrations/new.html.erb
+++ b/Thehelper/app/views/users/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
   <div class="field">
       <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true, autocomplete:"name", placeholder: 'Full name' %>
+      <%= f.text_field :name, autofocus: true, autocomplete:"name", placeholder: 'your name' %>
   </div>
 
   <div class="field">
